Fix: Some layout issues and prepre for build

--- a/css/style.css
+++ b/css/style.css
@@ -408,10 +408,6 @@ a {
   width: 40px;
 }
 
-.plan--popular {
-  transform: scale(1.1);
-}
-
 .plan:hover {
   transform: scale(1.05);
 }
@@ -421,6 +417,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -574,6 +574,10 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .callout {
+    transform: translateY(5rem);
+  }
+
   .callout__content {
     text-align: left;
   }
@@ -653,7 +657,7 @@ a {
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% -1%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
@@ -785,7 +789,7 @@ a {
 
 /* Plans Block */
 .block-plans .grid {
-  gap: 8rem 4rem;
+  gap: 8rem 5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -844,6 +848,15 @@ a {
   background: #232323;
 }
 
+.footer a {
+  color: #777;
+  transition: color 0.3s ease-in;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
 .footer__section {
   padding: 2rem;
   border-bottom: 1px solid #393939;
@@ -860,6 +873,7 @@ a {
 }
 
 .footer__brand > img {
+  width: 100%;
   max-width: 230px;
 }
 
@@ -870,15 +884,6 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .footer a {
-    color: #777;
-    transition: color 0.3s ease-in;
-  }
-
-  .footer a:hover {
-    color: #fff;
-  }
-
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
